# aidockflow

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/ingestion/ZINC15/3D-druglike-library/: zinc15_ingestion_config.yml
config/ingestion/uniprot-id/P00533/: chembl_ingestion_config.yml  pubchem_ingestion_config.yml
config/ingestion/uniprot_id/P00533/: chembl_ingestion_config.yml  pubchem_ingestion_config.yml
config/training/P00533/: model_v1.yml
config/uniprot-P00533/: model-1-pipeline.yml
config/uniprot-P00533/curation/: data_curation.yml
data/preprocessed/uniprot_id/P00533/: chembl_bioactives  pubchem_bioactives
resources/download-scripts/: ZINC-downloader-3D-smi.wget
src/: __main__.py  constants.py
src/data/curation/: actives_curator.py  base_curator.py  centroid_curator.py  round0_curator.py  target_structure_curator.py  zinc_curator.py
src/data/ingestion/: bioactive_compounds_extraction.py  ord_client.py
src/data/loading/: actives_loader.py
src/data/preprocessing/: compound_preprocessing.py
src/data/processing/: compound_processing.py  preprocessing.py
src/data/utils/: file_utils.py  logging_utils.py  mappings.py  pubchem_api.py
src/scripts/: run_pipeline.py
src/scripts/data/: run_pipeline.py
src/scripts/data/curation/: chembl_data_ingestion.py  high_fidelity_actives_curator.py  pubchem_data_ingestion.py  zinc15_druglike_data_ingestion.py
src/trainers/: trainer.py
src/training/trainers/: trainer.py
src/utils/: clustering_utils.py  file_utils.py  fingerprint_utils.py
(+2 files in other folders)
